--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <li class="nav-li"><a class='link' href='/testimonials.html'>Testimonials</a></li>
                         <li class="nav-li"><a class='link' href='/portfolio.html'>Portfolio</a></li>
                         <li class="nav-li"><a class='link' href='/contact.html'>Contact</a></li>
-                        <li class="nav-li"><a class="link button-solid" href="https://calendly.com/ariseconstructions" target="_blank" rel="noopener">Schedule Consult</a></li>
+                        <li class="nav-li"><a class="link button-solid" href="/contact.html" target="_blank" rel="noopener">Schedule Consult</a></li>
                     </ul>
                 </div>
                 <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
@@ -101,7 +101,7 @@
                     <p>
                         Arise Constructions is a full-service construction company offering everything from custom kitchens and bathrooms, basement remodels, structural work/repairs, to home additions and custom homes.
                     </p>
-                    <a class="button-solid" href="https://calendly.com/ariseconstructions" target="_blank" rel="noopener">
+                    <a class="button-solid" href="/contact.html" target="_blank" rel="noopener">
                         Schedule A Meeting
                     </a>
                 </div>
