--- a/new-home-construction.html
+++ b/new-home-construction.html
@@ -75,7 +75,7 @@
                         <li class="nav-li"><a class='link' href='/testimonials.html'>Testimonials</a></li>
                         <li class="nav-li"><a class='link' href='/portfolio.html'>Portfolio</a></li>
                         <li class="nav-li"><a class='link' href='/contact.html' id='active-menu'>Contact</a></li>
-                        <li class="nav-li"><a class="link button-solid" href="https://calendly.com/ariseconstructions" target="_blank" rel="noopener">Schedule Consult</a></li>
+                        <li class="nav-li"><a class="link button-solid" href="/contact.html" target="_blank" rel="noopener">Schedule Consult</a></li>
                     </ul>
                 </div>
                 <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
@@ -100,7 +100,7 @@
                     <p class="cs-text">
                         Rise above the rest with new, innovative home construction and renovation designs from Arise Constructions. We're the experts you can trust for all of your home construction and renovation needs, big or small. Uncover the possibilities with a free consultation today.
                     </p>
-                    <a href="https://calendly.com/ariseconstructions" class="cs-button-solid" target="_blank" rel="noopener">Get A Quote</a>
+                    <a href="/contact.html" class="cs-button-solid" target="_blank" rel="noopener">Get A Quote</a>
                     <a class='cs-button-transparent' href='/portfolio.html'>
                         <img class="cs-img" loading="lazy" decoding="async" src="https://d33wubrfki0l68.cloudfront.net/c73c4ff2ff1d08e0678885094a62da65612f32de/2ba55/images/play.svg" alt="play icon" width="17" height="17">
                         See Our Work
