--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                         <li class="nav-li"><a class='link' href='/testimonials.html'>Testimonials</a></li>
                         <li class="nav-li"><a class='link' href='/portfolio.html'>Portfolio</a></li>
                         <li class="nav-li"><a class='link' href='/contact.html'>Contact</a></li>
-                        <li class="nav-li"><a class="link button-solid" href="https://calendly.com/ariseconstructions" target="_blank" rel="noopener">Schedule Consult</a></li>
+                        <li class="nav-li"><a class="link button-solid" href="/contact.html" target="_blank" rel="noopener">Schedule Consult</a></li>
                     </ul>
                 </div>
                 <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
@@ -171,7 +171,7 @@
                 <p>
                     So, what are you waiting for? Let us show you why Arise Constructions is the best at what we do. We invite you to call or email us today - your first consultation is on us!
                 </p>
-                <a href="https://calendly.com/ariseconstructions" target="_blank" rel="noopener" class="button-solid">Get an Estimate Now</a>
+                <a href="/contact.html" target="_blank" rel="noopener" class="button-solid">Get an Estimate Now</a>
             </div>
             <picture>
                 <source media="(max-width: 600px)" srcset="https://d33wubrfki0l68.cloudfront.net/e70bc0a983d8cdf3928a8fd72ea53b022aed5b44/88e6e/images/new-home-m.webp">
