--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                         <li class="nav-li"><a class='link' href='/testimonials.html'>Testimonials</a></li>
                         <li class="nav-li"><a class='link' href='/portfolio.html'>Portfolio</a></li>
                         <li class="nav-li"><a class='link' href='/contact.html' id='active-menu'>Contact</a></li>
-                        <li class="nav-li"><a class="link button-solid" href="https://calendly.com/ariseconstructions" target="_blank" rel="noopener">Schedule Consult</a></li>
+                        <li class="nav-li"><a class="link button-solid" href="/contact.html" target="_blank" rel="noopener">Schedule Consult</a></li>
                     </ul>
                 </div>
                 <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
