--- a/new-home-construction.html
+++ b/new-home-construction.html
@@ -74,8 +74,7 @@
                         <li class="nav-li"><a class='link' href='/new-home-construction.html'>Custom Homes</a></li>
                         <li class="nav-li"><a class='link' href='/testimonials.html'>Testimonials</a></li>
                         <li class="nav-li"><a class='link' href='/portfolio.html'>Portfolio</a></li>
-                        <li class="nav-li"><a class='link' href='/contact.html' id='active-menu'>Contact</a></li>
-                        <li class="nav-li"><a class="link button-solid" href="/contact.html" target="_blank" rel="noopener">Contact</a></li>
+                        <li class="nav-li"><a class="link button-solid" href="/contact.html"  rel="noopener">Contact Us</a></li>
                     </ul>
                 </div>
                 <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
